feat: Add credit card application feature with dynamic card selection and validation process
- Updated index.html to include a new card for credit card application with a link to the new page.
- Created tarjeta-credito.html for the credit card application form, including sections for personal, labor, financial data, references, and limit configuration.
- Implemented JavaScript functions for loading card types, selecting a card, navigating through form sections, and submitting the application.
- Added real-time validation for fields such as ID and phone number.
- Introduced a loading animation and progress bar to enhance user experience during the application process.
- Created a shell script to start the FastAPI backend server.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -524,6 +524,13 @@
         <a href="#" class="btn">Usar Calculadora</a>
       </div>
 
+      <div class="nav-card" onclick="abrirTarjetaCredito()">
+        <span class="icon">💳</span>
+        <h3>Tarjeta de Crédito</h3>
+        <p>Solicitud inteligente de tarjeta de crédito. Evaluación automática con consultas a CCSS, BCR y Ministerio de Hacienda.</p>
+        <a href="#" class="btn">Solicitar Tarjeta</a>
+      </div>
+
       <div class="nav-card" onclick="abrirERP()">
         <span class="icon">🚀</span>
         <h3>ERP Odoo</h3>
@@ -645,6 +652,11 @@
     function abrirERP() {
       // Abrir ERP en nueva pestaña
       window.open('https://erp.sistemasorbix.com', '_blank');
+    }
+
+    function abrirTarjetaCredito() {
+      // Abrir solicitud de tarjeta de crédito en nueva pestaña
+      window.open('tarjeta-credito.html', '_blank');
     }
 
     function cerrarModal() {
