fix: Corregir etiqueta h3 en el panel de estado del sistema

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -481,7 +481,7 @@
     </header>
 
     <div class="status-panel">
-      <h3 style="margin-bottom: 20px; text-align: center;">📊 Estado del Sistema</h3>
+      <h3 style="margin-bottom: 20px;
       <div class="status-grid">
         <div class="status-item">
           <div class="status-value" id="uptime">99.9%</div>
