fix: Agregar texto "Estado del Sistema" en la etiqueta h3 del panel de estado

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>🧠 Orbix Systems</title>
-  <link rel="stylesheet" href="cyber-effects.css">
+  <link rel="stylesheet" href="/static/cyber-effects.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Exo+2:wght@300;400;600;700&display=swap');
     
@@ -481,7 +481,7 @@
     </header>
 
     <div class="status-panel">
-      <h3 style="margin-bottom: 20px;
+      <h3 style="margin-bottom: 20px;">Estado del Sistema</h3>
       <div class="status-grid">
         <div class="status-item">
           <div class="status-value" id="uptime">99.9%</div>
@@ -507,28 +507,28 @@
         <span class="icon">🧮</span>
         <h3>Validaciones</h3>
         <p>Sistema inteligente de validación de datos. Verifica cédulas, teléfonos, emails y cuentas bancarias en tiempo real.</p>
-        <a href="#" class="btn">Lanzar Validaciones</a>
+        <a href="/validaciones" class="btn">LANZAR VALIDACIONES</a>
       </div>
 
       <div class="nav-card" onclick="mostrarModulo('sentinel')">
         <span class="icon">🛡️</span>
         <h3>Sentinel</h3>
         <p>Centro de comando de seguridad y monitoreo. Vigilancia 24/7 con detección de amenazas e inteligencia artificial.</p>
-        <a href="#" class="btn">Abrir Sentinel</a>
+        <a href="/sentinel" class="btn">ABRIR SENTINEL</a>
       </div>
 
       <div class="nav-card" onclick="mostrarModulo('calculadora')">
         <span class="icon">💰</span>
         <h3>Calculadora</h3>
         <p>Calculadora financiera avanzada. Préstamos, hipotecas, inversiones y análisis financiero completo.</p>
-        <a href="#" class="btn">Usar Calculadora</a>
+        <a href="/calculadora" class="btn">USAR CALCULADORA</a>
       </div>
 
       <div class="nav-card" onclick="abrirTarjetaCredito()">
         <span class="icon">💳</span>
         <h3>Tarjeta de Crédito</h3>
         <p>Solicitud inteligente de tarjeta de crédito. Evaluación automática con consultas a CCSS, BCR y Ministerio de Hacienda.</p>
-        <a href="#" class="btn">Solicitar Tarjeta</a>
+        <a href="/tarjeta-credito" class="btn">SOLICITAR TARJETA</a>
       </div>
 
       <div class="nav-card" onclick="abrirERP()">
