feat: Agregar panel de métricas en tiempo real y gráficos de rendimiento al dashboard

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -502,10 +502,10 @@
       </div>
     </div>
 
-    <div class="nav-grid">
-      <div class="nav-card" onclick="mostrarModulo('validaciones')">
-        <span class="icon">🧮</span>
-        <h3>Validaciones</h3>
+    <!-- DASHBOARD DE MÉTRICAS EN TIEMPO REAL -->
+    <div class="status-panel" style="margin-bottom: 40px;">
+      <h3 style="margin-bottom: 20px;">Dashboard de Métricas en Tiempo Real</h3>
+      <div style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: space-between; align-items: stretch;">
         <p>Sistema inteligente de validación de datos. Verifica cédulas, teléfonos, emails y cuentas bancarias en tiempo real.</p>
         <a href="/validaciones" class="btn">LANZAR VALIDACIONES</a>
       </div>
