erp link updaated

--- a/public/sentinel.html
+++ b/public/sentinel.html
@@ -582,7 +582,7 @@ footer a {
       <a href="/validaciones">✅ Validaciones</a>
       <a href="/calculadora">🧮 Calculadora</a>
       <a href="/sentinel" class="active">🛡️ Sentinel</a>
-      <a href="https://erp.sistemasorbix.com" target="_blank">🚀 ERP</a>
+      <a href="https://sistemasorbix.com" target="_blank">🚀 ERP</a>
     </nav>
   </header>
 
